[#102] populate initial events based on exsisting people and projects
